# alacritty

./: Cargo.toml  PLAN.md
alacritty/: Cargo.toml
alacritty/src/: event.rs  main.rs  mux_actions.rs  mux_client.rs  mux_input.rs  mux_render.rs  mux_server.rs  mux_spawn.rs  mux_state.rs  window_context.rs
alacritty/src/config/: font.rs  ui_config.rs
alacritty/src/input/: keyboard.rs  mod.rs
alacritty/src/renderer/text/: glyph_cache.rs
alacritty_multiplexer/: Cargo.toml
alacritty_multiplexer/src/: cli.rs  command.rs  config.rs  error.rs  layout.rs  lib.rs  pane.rs  persistence.rs  protocol.rs  rect.rs  resize.rs  server.rs  session.rs  socket.rs  split.rs  statusbar.rs  window.rs
alacritty_multiplexer/tests/: coverage_sweep.rs  edge_cases.rs  mux_integration.rs  property_tests.rs
docs/: multiplexer.md
extra/man/: alacritty.5.scd
