[package]
name = "alacritty_multiplexer"
version = "0.1.0"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Terminal multiplexer for Alacritty"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
proptest = "1"
